<resources>
    <string name="app_name">learn_android_books</string>

    <string name="label_name">幸福之家</string>

    <string name="username">username</string>
    <string name="username_hint">please input your name</string>
    <string name="password">password</string>
    <string name="password_hint">please input your password</string>
    <string name="login">login</string>
    <string name="clear">clear</string>
    <string name="content">No Image</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="my_cart">My Cart</string>
    <string name="account_hint_text">QQ号/手机号/邮箱</string>
    <string name="password_hint_text">输入密码</string>
    <string name="image_description">No image found here</string>
    <string name="qq_text">QQ</string>
    <string name="forget_password">忘记密码</string>
    <string name="user_register">用户注册</string>
    <string name="toolbar_title">测试标题</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">微信</string>
    <string name="title_dashboard">通讯录</string>
    <string name="title_notifications">发现</string>
    <string name="search">search</string>
    <string name="title_me">我</string>
</resources>
