<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/username"
            android:textSize="20sp" />

        <EditText
            android:layout_width="300dp"
            android:autofillHints="your username"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:textSize="20sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/password"
            android:textSize="20sp" />

        <EditText
            android:layout_width="300dp"
            android:autofillHints="your password"
            android:hint="@string/password_hint"
            android:inputType="textPersonName"
            android:textSize="20sp" />
    </TableRow>


</TableLayout>