<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:id="@+id/qq_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/qq" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qq_text"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/qq_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/qq_header">

        <EditText
            android:drawableEnd="@drawable/main_more_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/edit_text_border"
            android:gravity="center"
            android:hint="@string/account_hint_text"
            android:importantForAutofill="no"
            android:inputType="number"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/edit_text_cursor" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:gravity="center"
            android:hint="@string/password_hint_text"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/edit_text_cursor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/qq_info">

        <ImageButton
            android:id="@+id/ibt_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:contentDescription="@string/image_description"
            android:src="@drawable/qq_send_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="#1A1F2F" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/user_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_register"
            android:textColor="#1A1F2F" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>